--- a/donkey/templates/vehicle.html
+++ b/donkey/templates/vehicle.html
@@ -94,6 +94,7 @@
               <option value="local_angle">Local Angle (d)</option>
               <option value="auto">Auto (a)</option>
               <option value="auto_angle">Auto Angle (s)</option>
+              <option value="platoon">Platoon mode</option>
             </select>
           </div>
           <div class="form-group">
